--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -172,70 +172,69 @@
                     <div class="form-icon-holder">
                         <img src="{% static 'icons/checkout/city.svg' %}" alt="" style="width: 24px; height:24px">
                     </div>
-                    <input type="hidden" required name="city" placeholder="Одберете град" class="checksout-city"
-                           value="Undefined">
-                    <div class="dropdownsearch">
-                        <div class="options">
-                            <select name="" id="dynamic_select">
-                                <option value="Одбери град" fake-name="Одбери град">Одбери град</option>
-                                <option value="Аеродром" fake-name="Aerodrom">Аеродром</option>
-                                <option value="Арачиново" fake-name="Aracinovo">Арачиново</option>
-                                <option value="Берово" fake-name="Berovo">Берово</option>
-                                <option value="Битола" fake-name="Bitola">Битола</option>
-                                <option value="Богданци" fake-name="Bogdanci">Богданци</option>
-                                <option value="Бутел" fake-name="Butel">Бутел</option>
-                                <option value="Валандово" fake-name="Valandovo">Валандово</option>
-                                <option value="Велес" fake-name="Veles">Велес</option>
-                                <option value="Виница" fake-name="Vinica">Виница</option>
-                                <option value="Гази Баба" fake-name="Gazi Baba">Гази Баба</option>
-                                <option value="Гевгелија" fake-name="Gevgelija">Гевгелија</option>
-                                <option value="Гостивар" fake-name="Gostivar">Гостивар</option>
-                                <option value="Дебар" fake-name="Debar">Дебар</option>
-                                <option value="Делчево" fake-name="Delcevo">Делчево</option>
-                                <option value="Демир Капија" fake-name="Demir Kapija">Демир Капија</option>
-                                <option value="Демир Хисар" fake-name="Demir Hisar">Демир Хисар</option>
-                                <option value="Дојран" fake-name="Dojran">Дојран</option>
-                                <option value="Ѓорче Петров" fake-name="Gjorce Petrov">Ѓорче Петров</option>
-                                <option value="Зелениково" fake-name="Zelenikovo">Зелениково</option>
-                                <option value="Илинден" fake-name="Ilinden">Илинден</option>
-                                <option value="Кавадарци" fake-name="Kavadarci">Кавадарци</option>
-                                <option value="Карпош" fake-name="Karpos">Карпош</option>
-                                <option value="Кисела Вода" fake-name="Kisela Voda">Кисела Вода</option>
-                                <option value="Кичево" fake-name="Kichevo">Кичево</option>
-                                <option value="Кочани" fake-name="Kocani">Кочани</option>
-                                <option value="Кратово" fake-name="Kratovo">Кратово</option>
-                                <option value="Крива Паланка" fake-name="Kriva Palanka">Крива Паланка</option>
-                                <option value="Крушево" fake-name="Krusevo">Крушево</option>
-                                <option value="Куманово" fake-name="Kumanovo">Куманово</option>
-                                <option value="Маврово" fake-name="Mavrovo">Маврово</option>
-                                <option value="Македонска Каменица" fake-name="Makedonska Kamenica">Македонска
-                                    Каменица
-                                </option>
-                                <option value="Македонски Брод" fake-name="Makedonski Brod">Македонски Брод</option>
-                                <option value="Неготино" fake-name="Negotino">Неготино</option>
-                                <option value="Охрид" fake-name="Ohrid">Охрид</option>
-                                <option value="Петровец" fake-name="Petrovec">Петровец</option>
-                                <option value="Пехчево" fake-name="Pehcevo">Пехчево</option>
-                                <option value="Прилеп" fake-name="Prilep">Прилеп</option>
-                                <option value="Пробиштип" fake-name="Probistip">Пробиштип</option>
-                                <option value="Радовиш" fake-name="Radovis">Радовиш</option>
-                                <option value="Ресен" fake-name="Resen">Ресен</option>
-                                <option value="Сарај" fake-name="Saraj">Сарај</option>
-                                <option value="Свети Николе" fake-name="Sveti Nikole">Свети Николе</option>
-                                <option value="Скопје" fake-name="Skopje">Скопје</option>
-                                <option value="Сопиште" fake-name="Sopiste">Сопиште</option>
-                                <option value="Струга" fake-name="Struga">Струга</option>
-                                <option value="Струмица" fake-name="Strumica">Струмица</option>
-                                <option value="Студеничани" fake-name="Studenicani">Студеничани</option>
-                                <option value="Тетово" fake-name="Tetovo">Тетово</option>
-                                <option value="Центар" fake-name="Centar">Центар</option>
-                                <option value="Чаир" fake-name="Cair">Чаир</option>
-                                <option value="Чучер-Сандево" fake-name="Cucer Sandevo">Чучер-Сандево</option>
-                                <option value="Штип" fake-name="Stip">Штип</option>
-                                <option value="Шуто Оризари" fake-name="Suto Orizari">Шуто Оризари</option>
-                            </select>
-                        </div>
-                    </div>
+                    <input type="text" required name="city" placeholder="Одберете град" class="checksout-city">
+                    {#                    <div class="dropdownsearch">#}
+                    {#                        <div class="options">#}
+                    {#                            <select name="" id="dynamic_select">#}
+                    {#                                <option value="Одбери град" fake-name="Одбери град">Одбери град</option>#}
+                    {#                                <option value="Аеродром" fake-name="Aerodrom">Аеродром</option>#}
+                    {#                                <option value="Арачиново" fake-name="Aracinovo">Арачиново</option>#}
+                    {#                                <option value="Берово" fake-name="Berovo">Берово</option>#}
+                    {#                                <option value="Битола" fake-name="Bitola">Битола</option>#}
+                    {#                                <option value="Богданци" fake-name="Bogdanci">Богданци</option>#}
+                    {#                                <option value="Бутел" fake-name="Butel">Бутел</option>#}
+                    {#                                <option value="Валандово" fake-name="Valandovo">Валандово</option>#}
+                    {#                                <option value="Велес" fake-name="Veles">Велес</option>#}
+                    {#                                <option value="Виница" fake-name="Vinica">Виница</option>#}
+                    {#                                <option value="Гази Баба" fake-name="Gazi Baba">Гази Баба</option>#}
+                    {#                                <option value="Гевгелија" fake-name="Gevgelija">Гевгелија</option>#}
+                    {#                                <option value="Гостивар" fake-name="Gostivar">Гостивар</option>#}
+                    {#                                <option value="Дебар" fake-name="Debar">Дебар</option>#}
+                    {#                                <option value="Делчево" fake-name="Delcevo">Делчево</option>#}
+                    {#                                <option value="Демир Капија" fake-name="Demir Kapija">Демир Капија</option>#}
+                    {#                                <option value="Демир Хисар" fake-name="Demir Hisar">Демир Хисар</option>#}
+                    {#                                <option value="Дојран" fake-name="Dojran">Дојран</option>#}
+                    {#                                <option value="Ѓорче Петров" fake-name="Gjorce Petrov">Ѓорче Петров</option>#}
+                    {#                                <option value="Зелениково" fake-name="Zelenikovo">Зелениково</option>#}
+                    {#                                <option value="Илинден" fake-name="Ilinden">Илинден</option>#}
+                    {#                                <option value="Кавадарци" fake-name="Kavadarci">Кавадарци</option>#}
+                    {#                                <option value="Карпош" fake-name="Karpos">Карпош</option>#}
+                    {#                                <option value="Кисела Вода" fake-name="Kisela Voda">Кисела Вода</option>#}
+                    {#                                <option value="Кичево" fake-name="Kichevo">Кичево</option>#}
+                    {#                                <option value="Кочани" fake-name="Kocani">Кочани</option>#}
+                    {#                                <option value="Кратово" fake-name="Kratovo">Кратово</option>#}
+                    {#                                <option value="Крива Паланка" fake-name="Kriva Palanka">Крива Паланка</option>#}
+                    {#                                <option value="Крушево" fake-name="Krusevo">Крушево</option>#}
+                    {#                                <option value="Куманово" fake-name="Kumanovo">Куманово</option>#}
+                    {#                                <option value="Маврово" fake-name="Mavrovo">Маврово</option>#}
+                    {#                                <option value="Македонска Каменица" fake-name="Makedonska Kamenica">Македонска#}
+                    {#                                    Каменица#}
+                    {#                                </option>#}
+                    {#                                <option value="Македонски Брод" fake-name="Makedonski Brod">Македонски Брод</option>#}
+                    {#                                <option value="Неготино" fake-name="Negotino">Неготино</option>#}
+                    {#                                <option value="Охрид" fake-name="Ohrid">Охрид</option>#}
+                    {#                                <option value="Петровец" fake-name="Petrovec">Петровец</option>#}
+                    {#                                <option value="Пехчево" fake-name="Pehcevo">Пехчево</option>#}
+                    {#                                <option value="Прилеп" fake-name="Prilep">Прилеп</option>#}
+                    {#                                <option value="Пробиштип" fake-name="Probistip">Пробиштип</option>#}
+                    {#                                <option value="Радовиш" fake-name="Radovis">Радовиш</option>#}
+                    {#                                <option value="Ресен" fake-name="Resen">Ресен</option>#}
+                    {#                                <option value="Сарај" fake-name="Saraj">Сарај</option>#}
+                    {#                                <option value="Свети Николе" fake-name="Sveti Nikole">Свети Николе</option>#}
+                    {#                                <option value="Скопје" fake-name="Skopje">Скопје</option>#}
+                    {#                                <option value="Сопиште" fake-name="Sopiste">Сопиште</option>#}
+                    {#                                <option value="Струга" fake-name="Struga">Струга</option>#}
+                    {#                                <option value="Струмица" fake-name="Strumica">Струмица</option>#}
+                    {#                                <option value="Студеничани" fake-name="Studenicani">Студеничани</option>#}
+                    {#                                <option value="Тетово" fake-name="Tetovo">Тетово</option>#}
+                    {#                                <option value="Центар" fake-name="Centar">Центар</option>#}
+                    {#                                <option value="Чаир" fake-name="Cair">Чаир</option>#}
+                    {#                                <option value="Чучер-Сандево" fake-name="Cucer Sandevo">Чучер-Сандево</option>#}
+                    {#                                <option value="Штип" fake-name="Stip">Штип</option>#}
+                    {#                                <option value="Шуто Оризари" fake-name="Suto Orizari">Шуто Оризари</option>#}
+                    {#                            </select>#}
+                    {#                        </div>#}
+                    {#                    </div>#}
                 </div>
             </div>
             <button class="pay-button margin-bottom checkout_form_payBtn" type="submit" name="submitBtn1"
